--- a/web/www/templates/search.html
+++ b/web/www/templates/search.html
@@ -17,10 +17,21 @@
 					<input type="text" placeholder="100"ng-model="search.courseNumber">
 				</label>
 			</ion-item>
-			<ion-item>
-				<label class="item-input">
+			<ion-item >
+				<label class="item-input item-select">
 					<span class="input-label">Capacity</span>
-					<input type="text" placeholder="1" ng-model="search.capacity">
+					<select ng-model="search.capacity">
+						<option selected>1</option>
+						<option>2</option>
+						<option>3</option>
+						<option>4</option>
+						<option>5</option>
+						<option>6</option>
+						<option>7</option>
+						<option>8</option>
+						<option>9</option>
+						<option>10</option>
+					</select>
 				</label>
 			</ion-item>
 			<label class="item">
