--- a/web/www/templates/createGroups.html
+++ b/web/www/templates/createGroups.html
@@ -11,6 +11,7 @@
 					</select>
 				</label>
 			</ion-item>
+			<ion-item>
 				<label class="item-input">
 					<span class="input-label">Course Number</span>
 					<input type="text" placeholder="101" ng-model="create.courseNumber">
