The join functionality + no capacity search

--- a/web/www/templates/studygroup.html
+++ b/web/www/templates/studygroup.html
@@ -11,7 +11,7 @@
 			<p>Date: {{group.date}}</p>
 		</ion-item>
 		<ion-item>
-			<p>Capeacity: {{group.capacity}}</p>
+			<p>Capacity: {{group.capacity}}</p>
 		</ion-item>
 		<ion-item>
 			<p>Location: {{group.location}}</p>
@@ -20,7 +20,7 @@
 			<p>Description: {{group.description}}</p>
 		</ion-item>
 		<ion-item class="button-bar">
-		  <a class="button button-dark">Join</a>
+		  <a class="button button-dark" ng-click="join()">Join</a>
 		  <a class="button button-dark" ng-click="del()">Delete</a>
 		</ion-item>
 		
