--- a/web/www/templates/authView.html
+++ b/web/www/templates/authView.html
@@ -1,6 +1,9 @@
 <!--Authentication view: Login and Sign up pages are sliders that swithces between pages by swiping the screen or clicking the pager-->
 <link href="css/sliders.css" rel="stylesheet">
 <ion-pane ng-controller="AppCtrl">
+	<style>
+	input{text-align:left;}
+	</style>
 	<ion-slide-box pager-click="changeSlide(index)">
 		<ion-slide class="row responsive-sm responsive-md">
 		<ion-header-bar class="bar-dark"><h1 class="title">Login</h1></ion-header-bar>
