--- a/web/www/templates/studygroups.html
+++ b/web/www/templates/studygroups.html
@@ -1,5 +1,8 @@
 <ion-view cache-view="false" view-title="My Study Groups">
   <ion-content>
+  <div ng-if="!studygroups.length&&!studyGroupsJoined.length" ng-cloak class="item item-text-wrap">
+    <h2>You don't have any study groups.  Either search or create your own :)</h2>
+  </div>
   <div ng-show="studygroups.length" class="item item-text-wrap">
     <h2>My Own</h2>
   </div>
